fixed z-index issue

--- a/css/popup.css
+++ b/css/popup.css
@@ -37,10 +37,9 @@ hr.drop_shadow {
 }
 /*truncate text with ellipsis*/
 .truncate {
-	width: 50px;
-	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
+	white-space: pre-wrap;
 }
 .resultlist{
 	cursor: pointer; 
@@ -64,7 +63,6 @@ hr.drop_shadow {
 	color: #fff;
 	text-align:center; 
 	margin-top:10px;
-	z-index:0;
 }
 #sec-search{
 	height:100%;
@@ -107,7 +105,5 @@ hr.drop_shadow {
 	color: red;
 	margin-right:5px;
 	margin-top:1px;
-	height:18px;
-	z-index: 100;
-	
+	height:100%;	
 }
